Major Front-End Changes

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,7 @@
 TODO:
     improve graphics & usability {
-        add volume slider,
-        add play, pause, stop, next and previous song buttons,
-        add navbar (Login Page, All Playlists, Current User, Current Song)
+        add Song List somwehere (maybe on a sidebar?),
+        add current cong and media control buttons
     }
     figure out to work with the spotify player
     connect an sql lite database
-    import playlists from other platforms/local files (?) (needs API?)
-    search for songs and automatically get links (find link with name and platform || find name and platform with link) (needs API)
