Moved Username to Cookies

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,5 +2,4 @@ TODO:
     volume buttons
     connect an sql lite database
     switch order
-    figure out to work with the spotify player
-    cookie save username and playlist
+    figure out to work with the spotify player if possible
