--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 TODO:
+    sidebar vertical scaling
     connect an sql lite database
     switch order
     figure out to work with the spotify player if possible
