Now working with php7

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,4 @@ TODO:
     connect an sql lite database
     switch order
     figure out to work with the spotify player if possible
+    video toggle (https://github.com/Ashish-Bansal/audio-only-youtube/tree/master/src/js) (?)
