--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,11 @@
 TODO:
-    connect an sql lite database
-    deploying to altervista
-    improve sidebar scaling (fix fonts calc)
+    optimize sql functions
+    rename playlists
+    go to log in page when the session expired
+    
+    
+
+
+
+deploying to altervista
+improve sidebar scaling (fix fonts calc)
